creusot/tests/should_fail/prusti/logic/home_mismatch.stderr
error[creusot]: X@'0h cannot be moved to 'x since it isn't copy
                caused by return type mismatch
 --> home_mismatch.rs:6:5
  |
6 |     x
  |     ^

error: aborting due to previous error

